Fixing the attribution's text alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -141,6 +141,10 @@ main {
     transform: rotate(180deg);
 }
 
+.attribution {
+    text-align: center;
+}
+
 .attribution, .attribution a {
     color: white;
 }
